--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
             </p>
             <img src="./Img/me.jpg" width="400"/>
             <br>
-            <a target="_blank" href="https://instagram.com/ivancarreon25?utm_medium=copy_link">Instagram</a>
-            <br>
-            <a target="_blank" href="https://twitter.com/Ivancar251?s=09">Twitter</a>
-            <br>
-            <a target="_blank" href="https://github.com/Ivan252502?tab=repositories">Github</a>
-            <br>
-            <a target="_blank" href="https://www.linkedin.com/in/iv%C3%A1n-carre%C3%B3n-18516221b/">Linkedin</a>
+            <a target="_blank" href="https://www.instagram.com/ivancarreon25/"><img class="image" src="Img/instagram.png">
+            </a>
+            <a target="_blank" href="https://twitter.com/Ivancar251?s=09"><img class="image" src="./Img/twitter.png"></a>
+            <a target="_blank" href="https://github.com/Ivan252502?tab=repositories"><img class="image" src="./Img/github.png"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/iv%C3%A1n-carre%C3%B3n-18516221b/"><img class="image" src="./Img/linkedin.png"></a>
         </article>
 
         <article>
@@ -41,7 +39,7 @@
             <img src= "./Img/programming.jpg" width="400"/>
             <br>
             <p>Aquí podrás encontrar algunos proyectos que vaya realizando.</p>
-            <a target="_blank" href="https://github.com/Ivan252502?tab=repositories">Mis proyectos</a>
+            <a class="project" target="_blank" href="https://github.com/Ivan252502?tab=repositories">Mis proyectos</a>
         </article>
         <article>
             <h2>Mi deporte favorito</h2>
@@ -50,11 +48,8 @@
                 practicarlo me quita el estrés y me gusta mucho hacerlo.
             </p>
             <img src="./Img/gym.jpg" width="400"/>
-            <p>Mis mayor meta con esto es llegar a pesar 90 kilos.</p>
-        </article>
-        <article>
-            <p>Continuará...</p>
-        </article>
+            <p>Mi mayor meta con esto es llegar a pesar 90 kilos.</p>
+            </article>
     </section>
     <footer>
         <section>
@@ -65,3 +60,4 @@
     </footer>
 </body>
 </html>
+
