--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    maximun-scale=2.0, minimun-scale=2.0>
     <title>Iván's blog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,7 +58,7 @@
     <footer>
         <section>
             <a href="#titulo">Ir al comienzo</a>
-            <a href="mailto:ivancar2502@gmail.com">Contáctame aquí</a>
+            <a href="contacto.html">Contáctame aquí</a>
         </section>
         <p>Copyright 2021</p>
     </footer>
