--- a/index.html
+++ b/index.html
@@ -9,21 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     
 </head>
 <body>
     <header id="titulo">
-         <h1>Mi pequeño blog</h1>
+         <h1>My little blog</h1>
     </header>
     <section class="container">
         <article>
-            <h2>¿Quién soy?</h2>
-            <p>Mi nombre es Iván Carreón Galván, nací el 25 de febrero del
-                2004 en Manzanillo,Col., actualmente tengo 17 años, me gusta              
-                aprender día con día sobre temas o cosas que me apasionan y           
-                me gusta practicarlas diariamente para así poder perfeccionar           
-                mis habilidades y mejorar cada día.
+            <h2>Who am I?</h2>
+            <p>My name is Ivan, I was born in Manzanillo, Colima, on Frebruary 25th,2004, I'm 17 years old,I like to learn every day about topics or things (generally about technologies) that I like and I like to practice they daily to perfect my abilities and improve every day.
             </p>
             <img src="./Img/me.jpg" width="400"/>
             <br>
@@ -35,33 +31,30 @@
         </article>
 
         <article>
-            <H2>Lo que más me gusta</H2>
+            <H2>My favorite hobby</H2>
             <p>
-            Me gusta la programación, aunque no tenga mucho conocimiento acerca de esto,
-            es algo que podría estar horas haciéndolo y no sentiría el tiempo.
+           I like very much the programming, although I don't know so much about this, i like to do it, and i want to learn different programming languages, especially in web development.
             </p>
             <img src= "./Img/programming.jpg" width="400"/>
             <br>
-            <p>Aquí podrás encontrar algunos proyectos que vaya realizando.</p>
-            <a class="project" target="_blank" href="https://github.com/Ivan252502?tab=repositories">Mis proyectos</a>
+            <p>Here, you can find some github repositories that I have.</p>
+            <a class="project" target="_blank" href="https://github.com/Ivan252502?tab=repositories">Repositories</a>
         </article>
         <article>
-            <h2>Mi deporte favorito</h2>
+            <h2>My favorite sport</h2>
             <p>
-                Sin duda mi deporte favorito es y siempre será el fisiculturismo,
-                practicarlo me quita el estrés y me gusta mucho hacerlo.
+               I like to go to the gym, I love do it, it takes away my stress, and I be so happy when I go there.
             </p>
             <img src="./Img/gym.jpg" width="400"/>
-            <p>Mi mayor meta con esto es llegar a pesar 90 kilos.</p>
+            <p>My biggest goal with this is weighing 90 kilograms.</p>
             </article>
     </section>
     <footer>
         <section>
-            <a href="#titulo">Ir al comienzo</a>
-            <a href="contacto.html">Contáctame aquí</a>
+            <a href="#titulo">Back to beginning</a>
+            <a href="contacto.html">Contact me</a>
         </section>
         <p>Copyright 2021</p>
     </footer>
 </body>
 </html>
-
