--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/contact-form.css">
+    <link rel="stylesheet" href="contact-form.css">
 </head>
 <body>
     <div class="container"> 
